--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Outekelek Liliane</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/liliane-charlie" target="_blank"
+            >Outekelek Liliane</a
+          >
+          and is
+          <a
+            href="https://github.com/liliane-charlie/my_amazing_weatherApp1"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://golden-mochi-1b7b33.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
